@@ -50,6 +50,7 @@ Version 0.2.6 (2011-02-??)
 - Fixed CSS classes for new address fields in checkout module
 - Fixed publish toggle not working for non-admins
 - Fixed hardcoded labels in order history/details (Ticket #382)
+- Fixed unlimited downloads only downloadable once (Ticket #383)
 - Fixed: Address was not added to address book correctly
 - Fixed: Downloads in PDF invoice caused fatal error
 - Fixed: Product filter searched for field default value (Ticket #377)
